# diald-top

./: .version  INSTALL  Makefile  Makefile.def  Makefile.def.in  Makefile.in  README  config.h.in  configure  configure.in  diald-top.8  diald-top.8.in
client/: Makefile  Makefile.in  defines.h  diald-top.c  externs.h  hostrec.h  monitor.l  monitor.y  parser.c  parser.h  pipe.c  prototypes.h  resolve.c  screen.c  tester.c  version.h  version.h.in
client-lib/: Makefile.in  libclient.h  semaphores.c  shared_memory.c  thread.c
scripts/: diald-top.spec  generate-config  make-dist
scripts/m4/: aclocal.m4
server/: Makefile  Makefile.in  authenticate.c  conffile.l  conffile.y  diald-top-server.c  fds.h  fifo-server.c  loglevels.h  port-daemon.c  port-queue.c  ports.h  protos.h  selection.c
